--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,14 @@ body::-webkit-scrollbar {
     display: none; 
 }
 #body-header {
-    height: 40px;
+    
+    height: 65vh;
+    opacity: 0.8;
+    background-image:url(https://images.unsplash.com/photo-1497091071254-cc9b2ba7c48a?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=753&q=80);
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+    padding-top: 1.2rem;
 }
 #particles-js {
     background: black;
